--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "postinstall": "npx jetify"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/native": "^5.7.5",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-screens": "^2.7.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.11.0",
     "react-navigation": "^3.11.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.1",
